# tech-assessment-1

./: README.md  pyproject.toml
src/cli/: __init__.py  main.py
src/server/: __init__.py  main.py
