[project]
name = "carta-tech-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matthew Mazzanti", email = "matthew@carta.healthcare" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]

[project.scripts]
cli = "cli:main"
server = "server:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["cli", "server"]
